# Celsus

./: alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  settings.py  test.csv
alembic/: env.py
alembic/versions/: ed05eb39438c_create_all_table.py
celsus/: handlers.py  models.py  pagination.py
dockerfiles/: Dockerfile  Dockerfile-CelsusNG  Dockerfile-database  init.sql
tests/: test_handlers.py  test_models.py  test_mongo.py
