[tool.poetry]
name = "celsus"
version = "0.1.0"
description = ""
authors = ["Toan Phung <toan.phungkhoiquoctoan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tornado = "^6.1"
pandas = "^1.4.3"
SQLAlchemy = "^1.4.39"
tornado-sqlalchemy = "^0.7.0"
alembic = "^1.8.0"
psycopg2 = "^2.9.3"
SQLAlchemy-Paginator = "^0.2"
uniprotparser = "^1.0.1"
bcrypt = "^3.2.2"
aioredis = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

